# postgres-mcp-server

./: .env.example  README.md  main.py  pyproject.toml
src/postgres_mcp/: __init__.py  config.py  database.py  formatters.py  history.py  server.py  tools.py  types.py  validators.py
